--- a/assets/giantrobots/stylesheets/sass/_760-up.scss
+++ b/assets/giantrobots/stylesheets/sass/_760-up.scss
@@ -102,7 +102,7 @@ section#container {
 
   section#posts {
     float: left;
-    width: grid-width(9);
+    width: grid-width(8.8);
 
     .post {
       margin: 0 0 $lh*3 0;
@@ -461,7 +461,7 @@ footer {
   section#footer-container {
     @include clearfix();
     margin: 0 auto;
-    width: grid-width(9);
+    width: grid-width(8.8);
 
     h6 {
       color: #4a4a4a;
@@ -502,7 +502,7 @@ footer {
     section#products {
       @include clearfix();
       float: left;
-      width: grid-width(5);
+      width: grid-width(4.8);
 
       section.product {
         width: 100%;
