--- a/assets/giantrobots/stylesheets/sass/_995-up.scss
+++ b/assets/giantrobots/stylesheets/sass/_995-up.scss
@@ -456,7 +456,7 @@ section#container {
 /* Footer
 ------------------------------------------------------------------------------*/
 footer {
-  padding: $lh*3 0 $lh*6;
+  padding: 40px 20px 60px;
 
   section#footer-container {
     width: grid-width(12);
